--- a/k8sfile.yaml
+++ b/k8sfile.yaml
@@ -25,14 +25,7 @@ spec:
     spec:
       containers:
       - name: javawebapp-container
-        image: prcdocker/maven-web-application:multistagedockerfile
-        resources:
-          requests:
-            cpu: "300m"
-            memory: "450Mi"
-          limits:
-            memory: "550Mi"
-            cpu: "500m"
+        image: prcdocker/java-web-docker:1
         ports:
         - containerPort: 8080
 ---
