--- a/mavenwebappdeployment.yaml
+++ b/mavenwebappdeployment.yaml
@@ -1,42 +1,45 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mavenwebappdeployment
+  name: javawebapp-deployment
+  namespace: test
 spec:
-  revisionHistoryLimit: 10
   replicas: 2
+  revisionHistoryLimit: 5
   strategy:
-    type: Recreate
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 1
+  minReadySeconds: 30
   selector:
-    matchLabels:
-      app: mavenwebapp
+    matchExpressions:
+    - key: app
+      operator: In
+      values:
+      - javawebapp
   template:
     metadata:
-      name: mavenwebapppod
       labels:
-        app: mavenwebapp
+        app: javawebapp
     spec:
       containers:
-        - name: mavenwebappcontainer
-          image: dockerhandson/maven-web-application:TAG
-          ports:
-            - containerPort: 8080
-          resources:
-            requests:
-              cpu: 200m
-              memory: 256Mi
-            limits:
-              cpu: 500m
-              memory: 512Mi
+      - name: javawebapp-container
+        image: prcdocker/java-web-docker:1
+        ports:
+        - containerPort: 8080
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: mavenwebappsvc
+  name: javawebappsvc
+  namespace: test
 spec:
-  selector:
-    app: mavenwebapp
   type: NodePort
+  selector:
+    app: javawebapp
   ports:
-  - port: 80
+  - port: 8080
     targetPort: 8080
+    name: javawebapp
+    nodePort: 30004
