--- a/pom.xml
+++ b/pom.xml
@@ -12,10 +12,22 @@
 	<description>Maven Web Project for Java Project</description>
 
 	<organization>
-		<name>Akash Yadav</name>
-		<url>http://AkashYadav.com/</url>
+		<name>Mithun Technologies</name>
+		<url>http://mithuntechnologies.com/</url>
 	</organization>
 
+	<properties>
+		<jdk.version>1.8</jdk.version>
+		<spring.version>5.1.2.RELEASE</spring.version>
+		<junit.version>4.11</junit.version>
+		<log4j.version>1.2.17</log4j.version>
+		<sonar.host.url>http://34.61.189.109:9000/</sonar.host.url>
+		<sonar.login>admin</sonar.login>
+		<sonar.password>root</sonar.password> 
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
+	</properties>
 
 	<dependencies>
 		
@@ -85,14 +97,14 @@
 	
 	    <repository>
 	      <id>nexus</id>
-	      <name>Akash Yadav Releases Nexus Repository</name>
-	      <url>http://34.61.189.109:8081/repository/flipkart-release/</url>
+	      <name>Mithun Technologies Releases Nexus Repository</name>
+	      <url>http://34.61.189.109:9980/repository/maven-releases/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Akash Yadav Snapshot Nexus Repository </name>
-	      <url>http://34.61.189.109:8081/repository/flipkart-snapshot/</url>
+	      <name>Mithun Technologies Snapshot Nexus Repository </name>
+	      <url>http://34.61.189.109:9980/repository/maven-releases/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
@@ -101,6 +113,11 @@
 		<finalName>maven-web-application</finalName>
 		
 		<plugins>
+			<plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-war-plugin</artifactId>
+                            <version>3.3.2</version>
+                        </plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -137,17 +154,6 @@
 			
 </plugins>
 	</build>
-
-    <distributionManagement>
-        <repository>
-            <id>maven-releases</id>
-            <url>http://34.61.189.109:8081/repository/maven-releases/</url>
-        </repository>
-        <snapshotRepository>
-            <id>maven-snapshots</id>
-            <url>http://34.61.189.109:8081/repository/maven-snapshots/</url>
-        </snapshotRepository>
-    </distributionManagement>
-
+	
 	
 </project>
