--- a/k8sfile.yaml
+++ b/k8sfile.yaml
@@ -25,7 +25,7 @@ spec:
     spec:
       containers:
       - name: javawebapp-container
-        image: us-central1-docker.pkg.dev/devops-practices-2025/springbootdockerrepo/spring-boot-mongo:master-11
+        image: us-central1-docker.pkg.dev/devops-practices-2025/springbootdockerrepo/spring-boot-mongo:master-18
         ports:
         - containerPort: 8080
 ---
@@ -57,10 +57,10 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-    - host: springboot.local         # <-- replaced in Jenkins pipeline
+    - host: springboot.local
       http:
         paths:
-          - path: /maven-web-application   # <-- replaced in Jenkins pipeline
+          - path: /maven-web-application/
             pathType: Prefix
             backend:
               service:
